Slight style tweaks and dark mode fixes

--- a/dark.css
+++ b/dark.css
@@ -238,7 +238,7 @@ button.btn-secondary {
     border-color: #333 !important;
 }
 
-.plus-profile-label {
+.badge-secondary {
     background-color: #333 !important;
 }
 
