--- a/main.css
+++ b/main.css
@@ -1,9 +1,3 @@
-.plus-profile-label {
-    background-color: #f5f5f5 !important;
-    padding: .1rem .7rem !important;
-    cursor: default;
-}
-
 #plus-add-new-post {
     border-radius: 24px;
     padding-left: 2rem;
